After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776198 - Stray semicolon after g_variant_print() function in gvariant.c
Stray semicolon after g_variant_print() function in gvariant.c
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gvariant
2.46.x
Other Solaris
: Normal minor
: ---
Assigned To: Allison Karlitskaya (desrt)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-12-17 06:53 UTC by Alan Coopersmith
Modified: 2016-12-27 19:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch currently used in Solaris builds (781 bytes, patch)
2016-12-17 06:55 UTC, Alan Coopersmith
committed Details | Review

Description Alan Coopersmith 2016-12-17 06:53:32 UTC
When building glib with the Solaris Studio compilers, cc warns:

"gvariant.c", line 2621: warning: syntax error:  empty declaration

due to the extra semicolon hanging out after the end of the g_variant_print()
function:

   2615 gchar *
   2616 g_variant_print (GVariant *value,
   2617                  gboolean  type_annotate)
   2618 {
   2619   return g_string_free (g_variant_print_string (value, NULL, type_annotate),
   2620                         FALSE);
   2621 };

gcc will also flag it if you enable pedantic warnings:

gvariant.c: At top level:
gvariant.c:2621:2: warning: ISO C does not allow extra ‘;’ outside of a function [-Wpedantic]
 };
  ^
Comment 1 Alan Coopersmith 2016-12-17 06:55:45 UTC
Created attachment 342105 [details] [review]
Patch currently used in Solaris builds
Comment 2 Allison Karlitskaya (desrt) 2016-12-23 17:37:46 UTC
Review of attachment 342105 [details] [review]:

Thanks very much.  Can you commit this?
Comment 3 Sébastien Wilmet 2016-12-27 19:54:50 UTC
Comment on attachment 342105 [details] [review]
Patch currently used in Solaris builds

Pushed as commit 9b3cb4470d1d3458dd2ee78ab675123a37fa332a.