Remove stray semicolon after g_variant_print() function in gvariant.c

https://bugzilla.gnome.org/show_bug.cgi?id=776198

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>